tools/rpk-automation/gen/23.2/rpk-debug-bundle.adoc
= rpk debug bundle
:description: rpk debug bundle

'rpk debug bundle' collects environment data that can help debug and diagnose
issues with a redpanda cluster, a broker, or the machine it's running on. It
then bundles the collected data into a ZIP file, called a diagnostics bundle.

The files and directories in the diagnostics bundle differ depending on the 
environment in which Redpanda is running:

COMMON FILES

 - Kafka metadata: Broker configs, topic configs, start/committed/end offsets,
   groups, group commits.

 - Controller logs: The controller logs directory up to a limit set by
   --controller-logs-size-limit flag

 - Data directory structure: A file describing the data directory's contents.

 - redpanda configuration: The redpanda configuration file (`redpanda.yaml`;
   SASL credentials are stripped).

 - /proc/cpuinfo: CPU information like make, core count, cache, frequency.

 - /proc/interrupts: IRQ distribution across CPU cores.

 - Resource usage data: CPU usage percentage, free memory available for the
   redpanda process.

 - Clock drift: The ntp clock delta (using pool.ntp.org as a reference) & round
   trip time.

 - Admin API calls: Cluster and broker configurations, cluster health data, and 
   license key information.

 - Broker metrics: The broker's Prometheus metrics, fetched through its
   admin API (/metrics and /public_metrics).

BARE-METAL

 - Kernel logs: The kernel logs ring buffer (syslog).

 - DNS: The DNS info as reported by 'dig', using the hosts in
   /etc/resolv.conf.

 - Disk usage: The disk usage for the data directory, as output by 'du'.

 - redpanda logs: The node's redpanda logs written to journald. If --logs-since 
   or --logs-until are passed, then only the logs within the resulting time frame
   will be included.

 - Socket info: The active sockets data output by 'ss'.

 - Running process info: As reported by 'top'.

 - Virtual memory stats: As reported by 'vmstat'.

 - Network config: As reported by 'ip addr'.

 - lspci: List the PCI buses and the devices connected to them.

 - dmidecode: The DMI table contents. Only included if this command is run
   as root.

KUBERNETES

 - Kubernetes Resources: Kubernetes manifests for all resources in the given 
   Kubernetes namespace (via --namespace).

 - redpanda logs: Logs of each Pod in the the given Kubernetes namespace. If 
   --logs-since is passed, only the logs within the given timeframe are 
   included.


If you have an upload URL from the Redpanda support team, provide it in the 
--upload-url flag to upload your diagnostics bundle to Redpanda.

== Usage

[,bash]
----
rpk debug bundle [flags]
----

== Flags

[cols="1m,1a,2a]
|===
|*Value* |*Type* |*Description*

|`--controller-logs-size-limit` |string |The size limit of the controller logs that can be stored in the bundle (e.g. 3MB, 1GiB) (default "20MB").

|`-h, --help` |- |Help for bundle.

|`--logs-since` |string |Include log entries on or newer than the specified date (journalctl date format, e.g. YYYY-MM-DD.

|`--logs-size-limit` |string |Read the logs until the given size is reached (e.g. 3MB, 1GiB) (default "100MiB").

|`--logs-until` |string |Include log entries on or older than the specified date (journalctl date format, e.g. YYYY-MM-DD.

|`--metrics-interval` |duration |Interval between metrics snapshots (e.g. 30s, 1.5m) (default 10s).

|`-n, --namespace` |string |The namespace to use to collect the resources from (k8s only) (default "redpanda").

|`-o, --output` |string |The file path where the debug file will be written (default ./&lt;timestamp&gt;-bundle.zip).

|`--timeout` |duration |How long to wait for child commands to execute (e.g. 30s, 1.5m) (default 12s).

|`--upload-url` |string |If provided, where to upload the bundle in addition to creating a copy on disk.

|`--config` |string |Redpanda or rpk config file; default search paths are ~/.config/rpk/rpk.yaml, $PWD, and /etc/redpanda/`redpanda.yaml`.

|`-X, --config-opt` |stringArray |Override rpk configuration settings; '-X help' for detail or '-X list' for terser detail.

|`--profile` |string |rpk profile to use.

|`-v, --verbose` |- |Enable verbose logging.
|===